--- a/.gitattributes
+++ b/.gitattributes
@@ -24,3 +24,13 @@
 *.png           binary
 *.gif           binary
 *.tiff          binary
+
+
+[filter "tabspace"]
+    smudge = unexpand --tabs=4 --first-only
+    clean = expand --tabs=4 --initial
+[filter "tabspace2"]
+    smudge = unexpand --tabs=2 --first-only
+    clean = expand --tabs=2 --initial
+    
+*.py  filter=tabspace
