--- a/.gitattributes
+++ b/.gitattributes
@@ -33,4 +33,4 @@
     smudge = unexpand --tabs=2 --first-only
     clean = expand --tabs=2 --initial
     
-*.py  filter=tabspace
+*.py  filter=tabspace2
