--- a/.gitattributes
+++ b/.gitattributes
@@ -1,36 +1,13 @@
 .gitattributes  export-ignore
 .gitignore      export-ignore
 
-*.txt           text
-*.text          text
-*.C             text trailing-space space-before-tab -indent-with-non-tab
-*.rst           text trailing-space space-before-tab -indent-with-non-tab
-*.clj           text trailing-space space-before-tab -indent-with-non-tab
 
-*.c             text diff=cpp trailing-space space-before-tab -indent-with-non-tab
-*.cpp           text diff=cpp trailing-space space-before-tab -indent-with-non-tab
-*.h             text diff=cpp trailing-space space-before-tab -indent-with-non-tab
-*.hpp           text diff=cpp trailing-space space-before-tab -indent-with-non-tab
-*.py            text diff=python trailing-space space-before-tab -indent-with-non-tab
-*.tex           text diff=tex
-*.java          text diff=java trailing-space space-before-tab -indent-with-non-tab
-*.pl            text diff=perl trailing-space space-before-tab -indent-with-non-tab
-*.php           text diff=php
-*.rb            text diff=ruby trailing-space space-before-tab -indent-with-non-tab
+*.py            whitespace=tab-in-indent,tabwidth=4
 
-*.sh            eol=lf
 
 *.jpg           binary
 *.png           binary
 *.gif           binary
-*.tiff          binary
+*.pyc          binary
 
 
-[filter "tabspace"]
-    smudge = unexpand --tabs=4 --first-only
-    clean = expand --tabs=4 --initial
-[filter "tabspace2"]
-    smudge = unexpand --tabs=2 --first-only
-    clean = expand --tabs=2 --initial
-    
-*.py  filter=tabspace2
