--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,14 @@
 .gitattributes  export-ignore
 .gitignore      export-ignore
 
+[filter "test"]
+    clean = expand --initial -t 4
+    smudge = expand --initial -t 4
+    required
+[merge]
+    renormalize = true
 
-*.py            whitespace=tab-in-indent,tabwidth=4
-
+*.py filter=test
 
 *.jpg           binary
 *.png           binary
